[package]
name = "rust-manta"
version = "0.1.0"
authors = ["Dave Eddy <dave@daveeddy.com>", "Rui Loura <rui@joyent.com>"]

[dependencies]
# hashing/encoding
base64 = "0.9.2"
hmac = "0.5"
hyper = "0.12"
hyper-tls = "0.3.1"
md-5 = "0.7.0"
sha2 = "0.7.1"

# date parsing
chrono = "0.4"

# JSON
serde = "1.0.70"
serde_json = "1.0"

