[package]
name = "manta"
version = "0.2.0"
homepage = "https://www.tritondatacenter.com/triton/object-storage"
description = "Triton Object Storage (a.k.a. Manta) client tools"
edition = "2021"
repository = "https://github.com/tritondatacenter/rust-manta"
license = "MPL-2.0"
authors = [
    "MNX Cloud (mnx.io)",
    "Dave Eddy <dave@daveeddy.com>"
]
categories = ["command-line-utilities", "api-bindings"]
keywords = ["Triton", "Manta", "object-storage"]

[dependencies]
base64 = "0.21.5"
sha2 = "0.10"
md-5 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.23", features = ["stream", "json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full", "io-util"] }
tokio-util = { version = "0.7", features = ["full", "compat"] }
clap = { version = "4.0", default-features = false, features = ["std", "env", "derive", "help", "usage", "error-context"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tracing-bunyan-formatter = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
# Needed for error handling: https://github.com/seanmonstar/reqwest/issues/1853
url = "2.5"
futures = { version = "0.3.30", features = [] }